Admin panel: Small fixes for previous commit